welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:7: error: identifier expected but integer literal found.
		avance(nbPas:6);
                             ^SnakeBuggle:8: error: ')' expected but '}' found.
		}else{
                ^