welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
	baisseBrosse
	var posFinal:Boolean=false
	while(!posFinal){	
		if(!estFaceMur){
		avance(nbPas:6);
		}else{
			gauche();avance();gauche();
		}
	}
}
